@@ -1,6 +1,7 @@
 package org.eclipse.rdf4j.federated.evaluation;
 
 import java.util.Arrays;
+import java.util.List;
 
 import org.eclipse.rdf4j.federated.SPARQLBaseTest;
 import org.junit.jupiter.api.Assertions;
@@ -14,7 +15,7 @@ public class FederationEvalStrategyTest extends SPARQLBaseTest {
 		assumeSparqlEndpoint();
 
 		// federation with single member
-		prepareTest(Arrays.asList("/tests/data/data1.ttl"));
+		prepareTest(List.of("/tests/data/data1.ttl"));
 
 		String query = "SELECT * WHERE { ?s ?o ?o }";
 		String queryPlan = federationContext().getQueryManager().getQueryPlan(query);
@@ -28,7 +29,7 @@ public class FederationEvalStrategyTest extends SPARQLBaseTest {
 		assumeSparqlEndpoint();
 
 		// federation with single member
-		prepareTest(Arrays.asList("/tests/data/data1.ttl"));
+		prepareTest(List.of("/tests/data/data1.ttl"));
 
 		// query with service, evaluate using FedX
 		String query = "SELECT * WHERE { SERVICE <http://dummy> { ?s ?o ?o } }";
