@@ -124,7 +124,7 @@ public final class QueryEvaluator {
 		builder.transform(xslPath, "tuple.xsl");
 		builder.start();
 		builder.variables(names);
-		builder.link(Arrays.asList(INFO));
+		builder.link(List.of(INFO));
 		final List<Object> values = new ArrayList<>(names.length);
 		if (paged && writeCookie) {
 			// Only in this case do we have paged results, but were given the full
@@ -162,7 +162,7 @@ public final class QueryEvaluator {
 		try (TupleQueryResult result = query.evaluate()) {
 			final String[] names = result.getBindingNames().toArray(new String[0]);
 			builder.variables(names);
-			builder.link(Arrays.asList(INFO));
+			builder.link(List.of(INFO));
 			final List<Object> values = new ArrayList<>();
 			while (result.hasNext()) {
 				final BindingSet set = result.next();
@@ -194,7 +194,7 @@ public final class QueryEvaluator {
 		builder.transform(xslPath, "graph.xsl");
 		builder.start();
 		builder.variables("subject", "predicate", "object");
-		builder.link(Arrays.asList(INFO));
+		builder.link(List.of(INFO));
 		if (paged && writeCookie) {
 			// Only in this case do we have paged results, but were given the full
 			// query. Just-in-case parameter massaging below to avoid array index
@@ -218,7 +218,7 @@ public final class QueryEvaluator {
 	private void evaluateBooleanQuery(final TupleResultBuilder builder, final BooleanQuery query)
 			throws QueryEvaluationException, QueryResultHandlerException {
 		final boolean result = query.evaluate();
-		builder.link(Arrays.asList(INFO));
+		builder.link(List.of(INFO));
 		builder.bool(result);
 	}
 
